--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.8",
+    "@clerk/nextjs": "^6.36.2",
+    "@google/genai": "^1.34.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^6.19.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "lucide-react": "^0.556.0",
+    "next": "^16.0.10",
+    "pg": "^8.16.3",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "prisma": "^6.19.1",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
